added campaign info into campaign history